--- a/src/app/taskmodule/task-list/task-list.component.scss
+++ b/src/app/taskmodule/task-list/task-list.component.scss
@@ -85,6 +85,7 @@
   .mat-column-description,
   .mat-column-targetdate,
   .mat-column-status, 
+  .mat-column-update, 
   .mat-column-Action {
     border-right: 1px solid lightgray;
   }
