--- a/src/app/usit/components/sales/interview-list/add-interview/add-interview.component.html
+++ b/src/app/usit/components/sales/interview-list/add-interview/add-interview.component.html
@@ -8,7 +8,7 @@
 </div>
 <mat-card class="center-card">
 
-    <form [formGroup]="interviewForm" (ngSubmit)="onSubmit()" class="vendor-form" >
+    <form [formGroup]="interviewForm"  class="vendor-form" >
       <div class="form">
         <div class="form-column-left">
           <input type="hidden" formControlName="intrid" name="intrid">
@@ -201,6 +201,6 @@
     </form>
     <div class="form-button-right">
       <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
-      <button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
+      <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
     </div>
   </mat-card>
