--- a/src/app/usit/components/vendor-management/vendor-list/vendor-company-rec-info/vendor-company-rec-info.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-company-rec-info/vendor-company-rec-info.component.html
@@ -24,7 +24,7 @@
 
         <!-- Department Column -->
         <ng-container matColumnDef="RecruiterName">
-            <th mat-header-cell *matHeaderCellDef > Department </th>
+            <th mat-header-cell *matHeaderCellDef > Recruiter </th>
             <td mat-cell *matCellDef="let element"> {{ element.recruiter }} </td>
         </ng-container>
 
