--- a/src/app/usit/components/dashboard/dashboard.component.scss
+++ b/src/app/usit/components/dashboard/dashboard.component.scss
@@ -1,48 +1,279 @@
-*{
-  inset: 0;
-}
-.container{
-  display: grid;
-  grid-template-columns:  1.25fr 1.25fr 1fr;
-
-  height: 100dvh;
-  grid-gap: 16px;
-  grid-template-areas:
-   "submisstions inteviews activity"
-
-   "closures closures activity"
-
-   "sourcing sourcing activity"
-
-
-  "topselling topselling activity";
-
-
+ul {
+  padding-inline-start: 10px;
+  background-color: rgb(228, 231, 234);
+  height: 2rem;
+  padding-top: 8PX;
+  top: 0;
 }
 
-#submisstions{
-  grid-area: submisstions;
-  height: 150px;
-}
-#inteviews{
-  grid-area: inteviews;
-  height: 150px;
-}
-#activity{
-  grid-area: activity;
-  height: 800px;
-}
-#closures{
-  grid-area: closures;
-  height: 400px;
-}
-#sourcing{
-  grid-area: sourcing;
-  height: 400px;
+ul.breadcrumb {
+  list-style: none;
 }
 
-#topselling{
-  grid-area: topselling;
-  height: 400px;
+ul.breadcrumb li {
+  display: inline;
 }
 
+ul.breadcrumb li+li:before {
+  color: black;
+  content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+  color: #0275d8;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  background-color: white;
+  top: 0;
+  overflow: hidden;
+  margin: 4px;
+  background-color: rgb(228, 231, 234);
+}
+
+.header-text {
+  padding-left: 8px;
+  font-weight: 600;
+}
+
+.overall-container {
+  height: 100vh;
+  overflow: auto;
+  padding: 10px 10px 0 10px;
+  background-color: rgb(228, 231, 234)
+}
+
+.container {
+  display: flex;
+  height: 100%;
+  overflow: auto;
+  justify-content: space-between;
+}
+
+.container .left-div {
+  width: 69%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container .right-div {
+  width: 29%;
+  overflow: auto;
+}
+
+.left-div  {
+  display: flex;
+}
+
+.left-div-inner-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.left-div-inner-cards .card-1,
+.left-div-inner-cards .card-2,
+.left-div-inner-cards .card-3 {
+  width: 32%;
+}
+
+.table-container {
+  padding-top: 10px;
+  flex: 1;
+}
+
+.table-container-dice {
+  padding-top: 10px;
+  flex: 1;
+  overflow: auto;
+  height: 600px;
+}
+
+.table-style {
+  width: 100%;
+  overflow: auto;
+  height: 500px;
+  display: block;
+  background-color: white;
+}
+
+.mat-mdc-header-row {
+  height: 30px !important;
+  background-color: rgb(147, 204, 204);
+}
+
+.mat-mdc-row {
+  height: 30px !important;
+}
+
+.no-data-found{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  margin-top: 64px;
+}
+
+.mat-column-Name,
+.mat-column-Category,
+.mat-column-Address,
+.mat-column-Email,
+.mat-column-ContactNumber,
+.mat-column-Owner,
+.mat-column-Track,
+.mat-column-PostedDate,
+.mat-column-JobTitle,
+.mat-column-JobLocation,
+.mat-column-Vendor,
+.mat-column-TaggedDate,
+.mat-column-TaggedBy {
+  border-right: 1px solid lightgray !important;
+}
+
+.card-1 .card,
+.card-2 .card,
+.card-3 .card {
+  display: flex;
+  flex-direction: row;
+  padding: 0px 5px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mat-mdc-card-title, .mat-mdc-card-subtitle {
+  font-size: 14px;
+  margin: 0;
+  font-weight: 700;
+}
+
+mat-typography p {
+  margin: 0px;
+}
+
+.dashboard {
+  font-size: .875em;
+  font-weight: 700!important;
+  margin-bottom: 0px !important;
+}
+
+.track-button {
+  width: fit-content !important;
+  padding: 0px !important;
+  height: auto !important;
+  background-color: green !important;
+  color: white !important;
+}
+
+
+.table-style-dice {
+  width: 100%;
+  overflow-y: auto;
+  display: block;
+  background-color: white;
+}
+
+.mat-mdc-menu-item {
+  min-height: 30px !important;
+}
+
+.mat-mdc-fab.mat-accent.submission-icon, 
+.mat-mdc-mini-fab.mat-accent.submission-icon .submission-icon {
+  --mdc-fab-container-color: #ffffcc; /* icon background color */
+  --mdc-fab-icon-color: white;
+  --mat-mdc-fab-color: #ffcc00; /* icon color */
+}
+
+.mat-mdc-fab.mat-accent.interview-icon, 
+.mat-mdc-mini-fab.mat-accent.interview-icon .interview-icon {
+  --mdc-fab-container-color: #ffecdf; /* icon background color */
+  --mdc-fab-icon-color: white;
+  --mat-mdc-fab-color: #ff771d; /* icon color */
+}
+
+.mat-mdc-fab.mat-accent.closure-icon, 
+.mat-mdc-mini-fab.mat-accent.closure-icon .closure-icon {
+  --mdc-fab-container-color: #e0f8e9; /* icon background color */
+  --mdc-fab-icon-color: white;
+  --mat-mdc-fab-color: #2eca6a; /* icon color */
+}
+
+.mat-mdc-card.activity-card {
+  height: 630px;
+  padding: 15px;
+  overflow-y: auto;
+}
+
+a {
+  color: #0d6efd;
+  text-decoration: none;
+}
+
+a .name {
+  font-size: 14px;
+  font-weight: bolder;
+  color: #717ff5;
+}
+
+.activity {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 5px;
+  justify-content: space-between;
+}
+
+.activity .activity-content{
+  width: 79%;
+}
+
+.activity .time{
+  margin: 0px auto;
+  width: 19%;
+}
+
+.approved {
+  color: #39c22d;
+  font-size: 12px;
+}
+
+.rejected {
+  color: #FF0000;
+  font-size: 12px;
+}
+
+.added {
+  color:#29abd3;
+  font-size: 12px;
+}
+
+.submssion{
+  color:#db1aab;
+  font-size: 12px;
+}
+
+.pointer{
+  cursor: pointer;
+}
+
+b {
+  font-weight: bold;
+}
+
+.bold-text {
+  font-weight: bold;
+}
+
+.mat-mdc-card-content {
+  padding: 0px;
+}
