--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -285,7 +285,7 @@
       <tr mat-row *matRowDef="let row; columns: dataTableColumnsDice;"></tr>
     </table>
     <hr>
-    <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
+    <p class="no-data-found" *ngIf="!dataSourceDice.filteredData.length">{{'No matching data found'}}</p>
   </section>
 
 
