--- a/src/app/usit/components/dashboard/dashboard.component.scss
+++ b/src/app/usit/components/dashboard/dashboard.component.scss
@@ -48,6 +48,19 @@ ul.breadcrumb li a:hover {
   font-weight: 600;
 }
 
+.header-container-leading-resources {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  padding: 0px;
+  z-index: 99999;
+  top: 0;
+  overflow: hidden;
+  background-color: white;
+}
+
 .overall-container {
   height: 100vh;
   overflow: auto;
@@ -57,8 +70,7 @@ ul.breadcrumb li a:hover {
 
 .container {
   display: flex;
-  height: 100%;
-  overflow: auto;
+  height: auto;
   justify-content: space-between;
 }
 
@@ -70,7 +82,7 @@ ul.breadcrumb li a:hover {
 
 .container .right-div {
   width: 29%;
-  overflow: auto;
+  // overflow: auto;
 }
 
 .left-div  {
@@ -98,7 +110,7 @@ ul.breadcrumb li a:hover {
   padding-top: 10px;
   flex: 1;
   overflow: auto;
-  height: 600px;
+  height: 700px;
 }
 
 .table-style {
@@ -210,9 +222,9 @@ mat-typography p {
 }
 
 .mat-mdc-card.activity-card {
-  height: 630px;
+  height: 678px;
   padding: 15px;
-  overflow-y: auto;
+  // overflow-y: auto;
 }
 
 a {
@@ -277,3 +289,9 @@ b {
 .mat-mdc-card-content {
   padding: 0px 0px 16px 0px;
 }
+
+// @media screen and (min-width: 1440px) {
+//  .container {
+//   height: 72%;
+//  }
+// }
