--- a/src/app/usit/components/dashboard/dashboard.component.scss
+++ b/src/app/usit/components/dashboard/dashboard.component.scss
@@ -65,7 +65,7 @@ ul.breadcrumb li a:hover {
   height: 100vh;
   overflow: auto;
   padding: 10px 10px 0 10px;
-  background-color: rgb(228, 231, 234)
+  background-color: rgb(228, 231, 234);
 }
 
 .container {
@@ -109,8 +109,9 @@ ul.breadcrumb li a:hover {
 .table-container-dice {
   padding-top: 10px;
   flex: 1;
-  overflow: auto;
+  // overflow: auto;
   height: 700px;
+  // margin-bottom: 30px;
 }
 
 .table-style {
@@ -224,7 +225,7 @@ mat-typography p {
 .mat-mdc-card.activity-card {
   height: 678px;
   padding: 15px;
-  // overflow-y: auto;
+  overflow-y: auto;
 }
 
 a {
@@ -290,8 +291,7 @@ b {
   padding: 0px 0px 16px 0px;
 }
 
-// @media screen and (min-width: 1440px) {
-//  .container {
-//   height: 72%;
-//  }
-// }
+.consultant-id{
+  cursor: pointer;
+  color:#0275d8
+}
