--- a/src/app/usit/components/openreqs/openreqs.component.scss
+++ b/src/app/usit/components/openreqs/openreqs.component.scss
@@ -192,3 +192,8 @@
     color: black;
     pointer-events: none;
   }
+
+  .consultant-name a {
+    text-decoration: none;
+    color: #0d6efd;
+  }
