--- a/src/app/usit/components/reports/employee-reports/employee-reports.component.html
+++ b/src/app/usit/components/reports/employee-reports/employee-reports.component.html
@@ -3,7 +3,7 @@
     <li><a (click)="navigateToDashboard()">Home</a></li>
     <li class="last">Employee Performance Report</li>
   </ul>
-  <form [formGroup]="employeeReport" (ngSubmit)="onSubmit()">
+  <form [formGroup]="employeeReport">
 
     <mat-card mt-3 style="z-index: 1">
       <mat-card-content>
@@ -48,9 +48,9 @@
 
         <button (click)="onSubmit()" mat-raised-button color="primary">Submit</button>
         <button (click)="reset()" mat-raised-button color="warn">Reset</button>
-        <button *ngIf="submitted" (click)="excelImport()" mat-raised-button
+        <button *ngIf="showReport" (click)="excelImport()" mat-raised-button
           style="background-color: #4CAF50; color: white;">Excel</button>
-      </mat-card-content>
+      </mat-card-content><!-- [disabled]="!privilegeServ.hasPrivilege('US_M1EXCELIMP')" -->
     </mat-card>
   </form>
 
