--- a/src/app/usit/components/reports/sourcing-reports/sourcing-consultant-report/sourcing-consultant-report.component.html
+++ b/src/app/usit/components/reports/sourcing-reports/sourcing-consultant-report/sourcing-consultant-report.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div mat-dialog-content style="padding: 10px;">
   
   
     <div style="display: flex; justify-content: space-between; align-items: center;">
