--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
@@ -288,3 +288,8 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
     overflow: auto;
   }
 }
+
+.consultant-id{
+  cursor: pointer;
+  color:#0275d8
+}
