--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -185,7 +185,7 @@
             {{data.trtime}}
           </div>
           <div class="activity-content" *ngIf="data.flg=='VMS'">
-            <b> <a class="name" [routerLink]="['/user/','dashboard',data.userid]" class="bold-text">{{data.pseudoname}}</a>&nbsp;
+            <b> <a  (click)="goToUserInfo(data.userid)" class="bold-text name consultant-id">{{data.pseudoname}}</a>&nbsp;
               <span
                 [ngClass]="{'approved': (data.status =='Approved' ) ,'added': (data.status =='Added') ,'rejected': (data.status =='Rejected' )}">
                 <ng-container *ngIf="data.status=='Rejected'; then rejected else normal"></ng-container>
@@ -198,28 +198,31 @@
                 </ng-template>
               </span>
               &nbsp;
-              <a title="Click Here to review" [routerLink]="['/edit-vendor',data.vms]" target="_blank" class="bold-text">
-                  {{data.company}} </a>
+              <!-- <a title="Click Here to review" [routerLink]="['/edit-vendor',data.vms]" target="_blank" class="bold-text"> -->
+                {{data.company}}
+               <!-- </a> -->
+              <!-- <a title="Click Here to review" [routerLink]="['/edit-vendor',data.vms]" target="_blank" class="bold-text">
+                  {{data.company}} </a> -->
             </b>
           </div>
           <div class="activity-content" *ngIf="data.flg=='SUB-sales'">
-            <b> <a [routerLink]="['/user/','dashboard',data.userid]" class="bold-text">{{data.pseudoname}}</a> </b>
+            <b> <a  (click)="goToUserInfo(data.userid)" class="bold-text consultant-id">{{data.pseudoname}}</a> </b>
             {{data.status}} <b>
-              <a [routerLink]="['/consultant/','info','dashboard',data.consultantid]" class="bold-text">{{data.consultantname}}</a>
+              <a  (click)="goToConsultantInfo(data.consultantid)" class="bold-text consultant-id">{{data.consultantname}}</a>
             </b>
             Profile to <b class="bold-text">{{data.company}}(V)
               <span *ngIf="data.submissionrate !== null" class="bold-text"> {{data.submissionrate}}($/hr),</span>
-              <span *ngIf="data.submissionrate!==null" bold-text >, {{data.submissionrate}}($/hr),</span>
+              <!-- <span *ngIf="data.submissionrate!==null" bold-text >, {{data.submissionrate}}($/hr),</span> -->
             </b> on
             <b class="bold-text">{{data.emptype}}</b>
             <b> <span *ngIf="data.endclient!=='NULL'" class="bold-text">, {{data.endclient}}(client) </span><span
                 *ngIf="data.implpartner!=='NULL'" >, {{data.implpartner}}(IMPL)</span> </b>
           </div>
       
-          <div class="activity-content" *ngIf="data.flg=='SUB-recruiting'">
-            <b> <a [routerLink]="['/user/','dashboard',data.userid]" class="bold-text">{{data.pseudoname}}</a> </b>
+          <div class="activity-content" *ngIf="data.flg=='SUB-recruiting' || data.flg=='SUB-Recruiting'">
+            <b> <a (click)="goToUserInfo(data.userid)" class="bold-text consultant-id">{{data.pseudoname}}</a> </b>
             {{data.status}} <b>
-              <a [routerLink]="['/consultant/','info','dashboard',data.consultantid]" class="bold-text">{{data.consultantname}}</a>
+              <a (click)="goToConsultantInfo(data.consultantid)" class="bold-text consultant-id">{{data.consultantname}}</a>
             </b>
             Profile for <b class="bold-text">{{data.reqnumber}}(Req No),<span *ngIf="data.company !== 'NULL'" class="bold-text">{{data.company}}(V),</span>
               <span *ngIf="data.submissionrate !== null" class="bold-text" > {{data.submissionrate}}($/hr),</span>
@@ -228,18 +231,32 @@
             <b> <span *ngIf="data.endclient !== 'NULL'" class="bold-text">, {{data.endclient}}(client)</span> <span
                 *ngIf="data.implpartner !== null" class="bold-text">, {{data.implpartner}}(IMPL)</span> </b>
           </div>
+       
+          <div class="activity-content" *ngIf="data.flg=='SUB-domrecruiting'">
+            <b> <a (click)="goToUserInfo(data.userid)" class="bold-text consultant-id">{{data.pseudoname}}</a> </b>
+            {{data.status}} <b>
+              <a (click)="goToConsultantInfo(data.consultantid)" class="bold-text consultant-id">{{data.consultantname}}</a>
+            </b>
+            Profile for <b class="bold-text">{{data.reqnumber}} (Req No),<span *ngIf="data.company !== 'NULL'" class="bold-text">{{data.company}} (V),</span>
+              <span *ngIf="data.submissionrate !== null" class="bold-text" > {{data.submissionrate}}(/LPA),</span>
+            </b> 
+            <!-- <b class="bold-text">{{data.emptype}}</b> -->
+            <b> <span *ngIf="data.endclient !== 'NULL'" class="bold-text"> {{data.endclient}} (client)</span> 
+              <!-- <span *ngIf="data.implpartner !== null" class="bold-text">, {{data.implpartner}}(IMPL)</span> -->
+             </b>
+          </div>
         </div>
       </div>
     </mat-card>
   </div>
 </div>
 
-<div class="table-container-dice table-wrapper">
+<div class="table-container-dice table-wrapper" style="margin-bottom: 300px;">
   <div class="header-container-leading-resources">
     <span class="header-text">Dice Requirement Tags</span>
   </div>
    <hr>
-  <section class="table-style-dice mat-elevation-z8">
+  <section class="table-style-dice mat-elevation-z8" style="height: 630px; overflow-Y: scroll;">
     <table mat-table [dataSource]="dataSourceDice" class="responsive-table">
 
       <!--- Note that these columns can be defined in any order.
@@ -254,7 +271,7 @@
       <!-- Job Title Column -->
       <ng-container matColumnDef="JobTitle">
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by JobTitle"> Job Title </th>
-        <td mat-cell *matCellDef="let element"> <a href="{{ element.job_source }}">{{element?.job_title}}</a> </td>
+        <td mat-cell *matCellDef="let element"> <a href="{{ element.job_source }}" target="_blank">{{element?.job_title}}</a> </td>
       </ng-container>
 
       <!-- Category Column -->
@@ -297,6 +314,11 @@
     <p class="no-data-found" *ngIf="!dataSourceDice.filteredData.length">{{'No matching data found'}}</p>
   </section>
 
+ 
+</div>
+</div>
 
-</div>
-</div>
+<br>
+<br>
+<br>
+
