--- a/src/app/usit/components/reports/employee-reports/consultant-report/consultant-report.component.html
+++ b/src/app/usit/components/reports/employee-reports/consultant-report/consultant-report.component.html
@@ -1,8 +1,8 @@
-<div mat-dialog-content>
+<div mat-dialog-content style="padding: 10px;">
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h1 class="modal-title fs-5" id="exampleModalLabel"><b>{{consultantname}}</b> Leads </h1>
         <div style="display: flex; gap: 8px;">
-            <button mat-raised-button style="background-color: #4CAF50; color: white;"
+            <button mat-raised-button style="background-color: #4CAF50; color: white;" *ngIf="showReport"
                 (click)="popUpImport()">Excel</button>
             <button mat-raised-button style="background-color: #774caf; color: white;"
                 (click)="closeDialog()">Close</button>
