--- a/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
+++ b/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
@@ -1,10 +1,10 @@
-<div mat-dialog-content>
+<div mat-dialog-content style="padding: 10px;">
   <div
     style="display: flex; justify-content: space-between; align-items: center"
   >
     <h1 mat-dialog-title>'{{ executive }}' {{ vo.vo.status }}'s</h1>
     <div style="display: flex; gap: 8px">
-      <button
+      <button *ngIf="showReport"
         mat-raised-button
         style="background-color: #4caf50; color: white"
         (click)="popUpImport()"
