--- a/src/app/usit/components/reports/sourcing-reports/sourcing-reports.component.scss
+++ b/src/app/usit/components/reports/sourcing-reports/sourcing-reports.component.scss
@@ -172,3 +172,11 @@ form {
         margin-left: 3rem;
         margin-right: 3rem;
     }
+
+    ul{
+      padding-inline-start: 10px;
+      background-color: rgb(228, 231, 234);
+      height: 2rem;
+      padding-top: 8PX;
+      top: 0;
+    }
