--- a/src/app/usit/components/rssfed/rssfed.component.html
+++ b/src/app/usit/components/rssfed/rssfed.component.html
@@ -9,13 +9,11 @@
         </span>
 
         <div class="hot-list-actions">
+
+            <button mat-raised-button color="primary" (click)="readRSS()">Read RSS</button>
+
             <div class="search-hot-list">
-                <button matInput (click)="readRSS()">Read RSS</button>
-            </div>
-        </div>
-        <div class="hot-list-actions">
-            <div class="search-hot-list">
-                <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
+                <input matInput type="text" class="search" placeholder="search " (keyup)="onFilter($event)">
             </div>
         </div>
     </div>
@@ -42,7 +40,7 @@
                 <!-- Technology Column-->
                 <ng-container matColumnDef="company">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology">
-                        From  </th>
+                        From </th>
                     <td mat-cell *matCellDef="let element"><span class="consultant-name">{{element?.company}}
                         </span> </td>
                 </ng-container>
@@ -52,13 +50,15 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Visa">
                         Subject/Job Role </th>
                     <td mat-cell *matCellDef="let element">
-                        <a href="{{element?.feedLink}}" target="_blank">{{element?.feedTitle}}</a> </td>
+                        <a href="{{element?.feedLink}}" target="_blank">{{element?.feedTitle}}</a>
+                    </td>
                 </ng-container>
 
                 <!-- Experience Column-->
                 <ng-container matColumnDef="city">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"> Location </th>
-                    <td mat-cell *matCellDef="let element">{{element?.city}} , {{element?.state}} , {{element?.country}}</td>
+                    <td mat-cell *matCellDef="let element">{{element?.city}} , {{element?.state}} , {{element?.country}}
+                    </td>
                 </ng-container>
                 <ng-container matColumnDef="jobtype">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"> Type </th>
@@ -99,9 +99,10 @@
 
     <div class="paginator">
         <!-- paginator -->
-        <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
-            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+        <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
+            [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
+            [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
+            [pageIndex]="pageIndex" aria-label="Select page">
         </mat-paginator>
     </div>
 
