--- a/src/app/usit/components/sales/h1transfer/h1transfer.component.html
+++ b/src/app/usit/components/sales/h1transfer/h1transfer.component.html
@@ -10,10 +10,11 @@
         </span>
 
         <div class="hot-list-actions">
+            <button  class="search" mat-raised-button color="primary" (click)="handleExport()">Excel Import</button>
             <div class="search-hot-list">
-                    <button  class="search" mat-raised-button (click)="handleExport()">Excel Import</button>
-                <!-- <input matInput type="text" class="search" placeholder="search Hot List" (keyup)="applyFilter($event)"> -->
-            </div>
+                <input matInput type="text" class="search" placeholder="search H1 transfer"
+                  (keyup)="applyFilter($event)">
+              </div>
         </div>
     </div>
 
@@ -119,7 +120,7 @@
         <!-- paginator -->
         <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
             [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+            [hidePageSize]="hidePageSize" [pageIndex]="currentPageIndex" aria-label="Select page">
         </mat-paginator>
     </div>
 
