--- a/src/app/usit/components/sales/interview-list/interview-list.component.html
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.html
@@ -41,9 +41,12 @@
                 <!-- ID-->
                 <ng-container matColumnDef="ConsultantName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ConsultantName"> Consultant Name </th>
-                    <td mat-cell *matCellDef="let element"><span class="consultant-name"
-                            >{{element?.name}}
-                        </span> </td>
+                    <td mat-cell *matCellDef="let element">
+                        <span class="consultant-id"
+                        (click)="goToConsultantInfo(element, flag)">{{element?.name}}
+                      </span>
+                    
+                    </td>
                 </ng-container>
                 <!-- Name-->
                 <ng-container matColumnDef="DateAndToI">
