--- a/src/app/usit/components/employee-list/add-employee/add-employee.component.html
+++ b/src/app/usit/components/employee-list/add-employee/add-employee.component.html
@@ -95,8 +95,16 @@
           <mat-error *ngIf="employeeForm.controls.relievingdate.hasError('relievingBeforeJoining')">Relieving date
             cannot be earlier than joining date.</mat-error>
         </mat-form-field>
+
+        <div style="display: flex;" class="other-details-div">
+          <!-- Other Details Checkbox -->
+          <div class="other-details-inner-div">
+            <mat-checkbox class="custom-checkbox" (change)="toggleOtherDetails($event.checked)">Other Details</mat-checkbox>
+          </div>
+        </div>
+
         <!-- Aadhar -->
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Aadhar Number</mat-label>
           <input matInput formControlName="aadharno" maxlength="12" (keypress)="onlyNumberKey($event)">
           <mat-error *ngIf="employeeForm.get('aadharno').hasError('required')">Aadhar Number is required</mat-error>
@@ -104,7 +112,7 @@
             digits</mat-error>
         </mat-form-field>
         <!-- PAN -->
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>PAN Number</mat-label>
           <input matInput formControlName="panno" placeholder="Ex: ABCDE1234F" maxlength="10"
             (keypress)="onlyAlphanumericKey($event)">
@@ -114,26 +122,26 @@
       </div>
       <div class="form-column-right">
         <!-- BANK -->
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Bank Name</mat-label>
           <input matInput formControlName="bankname" maxlength="100">
           <mat-error *ngIf="employeeForm.get('bankname').hasError('required')">Bank Name is required</mat-error>
         </mat-form-field>
         <!-- AC NUMBER -->
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Account Number</mat-label>
           <input matInput formControlName="accno" maxlength="15" (keypress)="onlyNumberKey($event)">
           <mat-error *ngIf="employeeForm.get('accno').hasError('required')">Account Number is required</mat-error>
         </mat-form-field>
         <!-- IFSC -->
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>IFSC Code</mat-label>
           <input matInput formControlName="ifsc" maxlength="11" (keypress)="onlyAlphanumericKey($event)">
           <mat-error *ngIf="employeeForm.get('ifsc').hasError('required')">IFSC Code is required</mat-error>
           <mat-error *ngIf="employeeForm.get('ifsc').hasError('pattern')">Invalid IFSC Code</mat-error>
         </mat-form-field>
         <!-- Branch -->
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Branch Name</mat-label>
           <input matInput formControlName="branch" maxlength="50">
           <mat-error *ngIf="employeeForm.get('branch').hasError('required')">Branch Name is required</mat-error>
